--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <header class="header">
 
     <a href="#" class="logo">
-        <img src="images/logo.png" alt="">
+        <img src="images/toobig5.png" alt="">
     </a>
 
     <nav class="navbar">
@@ -51,9 +51,9 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>fresh coffee in the morning</h3>
+        <h3>Luxury timepieces from a trusted source</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat labore, sint cupiditate distinctio tempora reiciendis.</p>
-        <a href="#" class="btn">get yours now</a>
+        <a href="#menu" class="btn">View Collection</a>
     </div>
 
 </section>
@@ -150,43 +150,31 @@
 
         <div class="box">
             <img src="images/menu-1.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
             <img src="images/menu-2.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
             <img src="images/menu-3.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
             <img src="images/menu-4.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
             <img src="images/menu-5.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
         <div class="box">
             <img src="images/menu-6.png" alt="">
-            <h3>tasty and healty</h3>
-            <div class="price">$15.99 <span>20.99</span></div>
             <a href="#" class="btn">add to cart</a>
         </div>
 
